en/2.0/admin/labelType-guide.rst
===============
Setting a label
===============

This page is generated by Machine Translation from Japanese.

Setting a label
===============

Here are settings for the label. Label can classify documents that
appear in search results, select the crawl settings in. If you register
the label shown select label drop-down box to the right of the search
box.

How to set up
-------------

In Administrator account after logging in, click the menu label.

|image0|

|image1|

Display name
------------

Specifies the name that is displayed when the search label drop-down
select.

Value
-----

Specifies the identifier when a classified document. This value will be
sent to Solr. Must be alphanumeric characters.

.. |image0| image:: ../../../resources/images/en/2.0/labelType-1.png
.. |image1| image:: ../../../resources/images/en/2.0/labelType-2.png
