en/9.3/admin/labelType-guide.rst
===============
Setting a label
===============

This page is generated by Machine Translation from Japanese.

Overview
========

Here are settings for the label. Label can classify documents that
appear in search results, select the crawl settings in. You can pass
even if you do not set the crawl settings in the settings of the label
to add labels to specify regular expressions. If you register the label
shown select label drop-down box to the right of the search box.

How to set up
=============

How to display
--------------

In Administrator account after logging in, click the menu label.

|image0|

|image1|

Setting item
============

Display name
------------

Specifies the name that is displayed when the search label drop-down
select.

Value
-----

Specifies the identifier when a classified document. This value will be
sent to Solr. Must be alphanumeric characters.

Path to crawl
-------------

Sets the path to label in the regular expression. You can specify
multiple in multiple line description. Notwithstanding the crawl
configuration document to match the path specified here, will be
labeled.

The path to exclude from being crawled
--------------------------------------

In the path and crawled on regular expressions set from what you want to
exclude. You can specify multiple in multiple line description.

Roll
----

Specifies the role to view the label.

Display order
-------------

Specifies the order of the labels.

.. |image0| image:: /images/en/9.2/admin/labelType-1.png
.. |image1| image:: /images/en/9.2/admin/labelType-2.png
